--- a/css/index.css
+++ b/css/index.css
@@ -3121,6 +3121,7 @@ svg {
   transition: all 0.2s ease;
   padding: 0 10px;
   padding-left: 7px;
+  display: none;
 }
 
 .window-share-btn:hover {
